2005-10-03  Geoffrey Garen  <ggaren@apple.com>

        - Fixed <rdar://problem/4244084> Denver Regression: setUTC() functions don't take 
          into account Daylight Savings Time
          
        Reviewed by kevin.
        
        Fix was to roll in this change from TOT:

                2005-08-11  Maciej Stachowiak  <mjs@apple.com>
        
                Reviewed by Geoff.
                
                * kjs/date_object.cpp:
                (timetUsingCF): Fix one of the date tests my making the CF version of mktime
                have the same quirk about the DST field as the real mktime.
                * tests/mozilla/expected.html: Updated for newly fixed test.

2005-09-30  Timothy Hatcher  <timothy@apple.com>

		<rdar://problem/4277521> JS exceptions don't carry file/line information (3327)
		
		Fixed by Geoffrey Garen.
        Reviewed by Andrew Wooster.

		Sends file and line numbers with JS exceptions.

        * kjs/nodes.cpp:
        (Node::setExceptionDetailsIfNeeded):
        * kjs/nodes.h:

=== JavaScriptCore-417.1 ===

2005-09-30  Timothy Hatcher  <timothy@apple.com>

	    Merges fixes from TOT to Safari-2-0-branch

    2005-09-29  Geoffrey Garen  <ggaren@apple.com>

		- Second cut at fixing <rdar://problem/4275206> Denver Regression: Seed: 
		Past Editions of Opinions display "NAN/Undefined" for www.washingtonpost.com

        Reviewed by mjs.

        * kjs/date_object.cpp:
        (KJS::KRFCDate_parseDate): Intead of creating a timezone when one isn't specified,
        just rely on the fallback logic, which will do it for you. Also, return invalidDate
        if the date includes trailing garbage. (Somewhat accidentally, the timezone logic
        used to catch trailing garbage.)

=== JavaScriptCore-417 ===

2005-09-28  Timothy Hatcher  <timothy@apple.com>

	    Merges fixes from TOT to Safari-2-0-branch

    2005-09-28  Geoffrey Garen  <ggaren@apple.com>
