@@ -1,0 +1,182 @@
+.objc_class_name_WebScriptObject
+.objc_class_name_WebScriptObjectPrivate
+__NPN_CreateObject
+__NPN_CreateScriptObject
+__NPN_Evaluate
+__NPN_GetIntIdentifier
+__NPN_GetProperty
+__NPN_GetStringIdentifier
+__NPN_GetStringIdentifiers
+__NPN_IdentifierIsString
+__NPN_Invoke
+__NPN_InvokeDefault
+__NPN_ReleaseObject
+__NPN_ReleaseVariantValue
+__NPN_RemoveProperty
+__NPN_RetainObject
+__NPN_SetException
+__NPN_SetProperty
+__NPN_UTF8FromIdentifier
+__ZN3KJS10Identifier3addEPKc
+__ZN3KJS10Identifier3addEPNS_7UString3RepE
+__ZN3KJS10Identifier5equalEPNS_7UString3RepEPKc
+__ZN3KJS10ScopeChain3popEv
+__ZN3KJS10ScopeChain4pushEPNS_9ObjectImpE
+__ZN3KJS10ScopeChain7releaseEv
+__ZN3KJS10ScopeChainaSERKS0_
+__ZN3KJS11Interpreter10globalExecEv
+__ZN3KJS11Interpreter11checkSyntaxERKNS_7UStringE
+__ZN3KJS11Interpreter12virtual_hookEiPv
+__ZN3KJS11Interpreter13setCompatModeENS0_10CompatModeE
+__ZN3KJS11Interpreter15restoreBuiltinsERKNS_13SavedBuiltinsE
+__ZN3KJS11Interpreter16initGlobalObjectEv
+__ZN3KJS11Interpreter21shouldPrintExceptionsEv
+__ZN3KJS11Interpreter24setShouldPrintExceptionsEb
+__ZN3KJS11Interpreter30createLanguageInstanceForValueEPNS_9ExecStateENS_8Bindings8Instance15BindingLanguageERKNS_6ObjectEPKNS3_10RootObjectESB_
+__ZN3KJS11Interpreter4lockEv
+__ZN3KJS11Interpreter6unlockEv
+__ZN3KJS11Interpreter8evaluateERKNS_7UStringERKNS_5ValueES3_
+__ZN3KJS11Interpreter8evaluateERKNS_7UStringEiS3_RKNS_5ValueE
+__ZN3KJS11Interpreter9lockCountEv
+__ZN3KJS11InterpreterC1ERKNS_6ObjectE
+__ZN3KJS11InterpreterC2ERKNS_6ObjectE
+__ZN3KJS11InterpreterD1Ev
+__ZN3KJS11InterpreterD2Ev
+__ZN3KJS11PropertyMap7restoreERKNS_15SavedPropertiesE
+__ZN3KJS13ReferenceList6appendERKNS_9ReferenceE
+__ZN3KJS13ReferenceListC1Ev
+__ZN3KJS13ReferenceListD1Ev
+__ZN3KJS13SavedBuiltinsC1Ev
+__ZN3KJS13SavedBuiltinsD1Ev
+__ZN3KJS14InterpreterImp8evaluateERKNS_7UStringERKNS_5ValueES3_i
+__ZN3KJS15ProtectedValues20decreaseProtectCountEPNS_8ValueImpE
+__ZN3KJS15ProtectedValues20increaseProtectCountEPNS_8ValueImpE
+__ZN3KJS15SavedPropertiesC1Ev
+__ZN3KJS15SavedPropertiesD1Ev
+__ZN3KJS16RuntimeObjectImpC1EPNS_8Bindings8InstanceEb
+__ZN3KJS18lengthPropertyNameE
+__ZN3KJS19messagePropertyNameE
+__ZN3KJS21ReferenceListIteratorppEi
+__ZN3KJS4List11derefValuesEv
+__ZN3KJS4List6appendEPNS_8ValueImpE
+__ZN3KJS4List7releaseEv
+__ZN3KJS4List9refValuesEv
+__ZN3KJS4ListC1Ev
+__ZN3KJS4ListaSERKS0_
+__ZN3KJS4NullC1Ev
+__ZN3KJS5Error6createEPNS_9ExecStateENS_9ErrorTypeEPKciiPKNS_7UStringE
+__ZN3KJS6Lookup9findEntryEPKNS_9HashTableERKNS_10IdentifierE
+__ZN3KJS6NumberC1Ed
+__ZN3KJS6NumberC1Ei
+__ZN3KJS6NumberC1Ej
+__ZN3KJS6NumberC1El
+__ZN3KJS6NumberC1Em
+__ZN3KJS6Object11dynamicCastERKNS_5ValueE
+__ZN3KJS6Object4callEPNS_9ExecStateERS0_RKNS_4ListE
+__ZN3KJS6StringC1ERKNS_7UStringE
+__ZN3KJS7BooleanC1Eb
+__ZN3KJS7UString3Rep13createCopyingEPKNS_5UCharEi
+__ZN3KJS7UString3Rep4nullE
+__ZN3KJS7UString3Rep7destroyEv
+__ZN3KJS7UString4fromEl
+__ZN3KJS7UString6appendEPKc
+__ZN3KJS7UString6appendERKS0_
+__ZN3KJS7UStringC1EPKNS_5UCharEi
+__ZN3KJS7UStringC1EPKc
+__ZN3KJS7UStringC1ERKS0_S2_
+__ZN3KJS7UStringC1Ev
+__ZN3KJS7UStringaSEPKc
+__ZN3KJS7UStringaSERKS0_
+__ZN3KJS8Bindings10RootObject14setInterpreterEPNS_11InterpreterE
+__ZN3KJS8Bindings10RootObject25removeAllNativeReferencesEv
+__ZN3KJS8Bindings10RootObject40setFindRootObjectForNativeHandleFunctionEPFPS1_PvE
+__ZN3KJS8Bindings10RootObject41_findRootObjectForNativeHandleFunctionPtrE
+__ZN3KJS8Bindings8Instance21setDidExecuteFunctionEPFvPNS_9ExecStateEPNS_9ObjectImpEE
+__ZN3KJS8Bindings8Instance32createBindingForLanguageInstanceENS1_15BindingLanguageEPvPKNS0_10RootObjectE
+__ZN3KJS8Debugger12sourceUnusedEPNS_9ExecStateEi
+__ZN3KJS8Debugger6attachEPNS_11InterpreterE
+__ZN3KJS8Debugger9exceptionEPNS_9ExecStateEiiRNS_6ObjectE
+__ZN3KJS8DebuggerC2Ev
+__ZN3KJS8DebuggerD2Ev
+__ZN3KJS8ValueImpdlEPv
+__ZN3KJS8ValueImpnwEm
+__ZN3KJS9Collector15numInterpretersEv
+__ZN3KJS9Collector17rootObjectClassesEv
+__ZN3KJS9Collector20numReferencedObjectsEv
+__ZN3KJS9Collector22numGCNotAllowedObjectsEv
+__ZN3KJS9Collector4sizeEv
+__ZN3KJS9Collector7collectEv
+__ZN3KJS9ObjectImp11hasInstanceEPNS_9ExecStateERKNS_5ValueE
+__ZN3KJS9ObjectImp12setPrototypeERKNS_5ValueE
+__ZN3KJS9ObjectImp14deletePropertyEPNS_9ExecStateERKNS_10IdentifierE
+__ZN3KJS9ObjectImp14deletePropertyEPNS_9ExecStateEj
+__ZN3KJS9ObjectImp19deleteAllPropertiesEPNS_9ExecStateE
+__ZN3KJS9ObjectImp3putEPNS_9ExecStateERKNS_10IdentifierERKNS_5ValueEi
+__ZN3KJS9ObjectImp3putEPNS_9ExecStateEjRKNS_5ValueEi
+__ZN3KJS9ObjectImp4callEPNS_9ExecStateERNS_6ObjectERKNS_4ListE
+__ZN3KJS9ObjectImp4markEv
+__ZN3KJS9ObjectImp8propListEPNS_9ExecStateEb
+__ZN3KJS9ObjectImp9constructEPNS_9ExecStateERKNS_4ListE
+__ZN3KJS9ObjectImp9constructEPNS_9ExecStateERKNS_4ListERKNS_7UStringEi
+__ZN3KJS9ObjectImp9putDirectERKNS_10IdentifierEPNS_8ValueImpEi
+__ZN3KJS9ObjectImp9putDirectERKNS_10IdentifierEii
+__ZN3KJS9ObjectImpC1Ev
+__ZN3KJS9ObjectImpC2ERKNS_6ObjectE
+__ZN3KJS9ObjectImpC2Ev
+__ZN3KJS9ObjectImpD2Ev
+__ZN3KJS9ReferenceC1ERKNS_6ObjectERKNS_10IdentifierE
+__ZN3KJS9UndefinedC1Ev
+__ZN3KJSeqERKNS_7UStringEPKc
+__ZNK3KJS11Interpreter10compatModeEv
+__ZNK3KJS11Interpreter12builtinArrayEv
+__ZNK3KJS11Interpreter12globalObjectEv
+__ZNK3KJS11Interpreter12saveBuiltinsERNS_13SavedBuiltinsE
+__ZNK3KJS11Interpreter15builtinFunctionEv
+__ZNK3KJS11Interpreter22builtinObjectPrototypeEv
+__ZNK3KJS11PropertyMap3getERKNS_10IdentifierE
+__ZNK3KJS11PropertyMap4saveERNS_15SavedPropertiesE
+__ZNK3KJS13ReferenceList3endEv
+__ZNK3KJS13ReferenceList5beginEv
+__ZNK3KJS21ReferenceListIteratorneERKS0_
+__ZNK3KJS21ReferenceListIteratorptEv
+__ZNK3KJS4List5impAtEi
+__ZNK3KJS4List8copyTailEv
+__ZNK3KJS6String5valueEv
+__ZNK3KJS7UString12toArrayIndexEPb
+__ZNK3KJS7UString5asciiEv
+__ZNK3KJS7UString7toULongEPb
+__ZNK3KJS8ValueImp16dispatchToObjectEPNS_9ExecStateE
+__ZNK3KJS8ValueImp7toInt32EPNS_9ExecStateE
+__ZNK3KJS8ValueImp8toUInt32EPNS_9ExecStateE
+__ZNK3KJS8ValueImp8toUInt32ERj
+__ZNK3KJS8ValueImp9toIntegerEPNS_9ExecStateE
+__ZNK3KJS9ExecState18lexicalInterpreterEv
+__ZNK3KJS9ObjectImp11hasPropertyEPNS_9ExecStateERKNS_10IdentifierE
+__ZNK3KJS9ObjectImp11toPrimitiveEPNS_9ExecStateENS_4TypeE
+__ZNK3KJS9ObjectImp12defaultValueEPNS_9ExecStateENS_4TypeE
+__ZNK3KJS9ObjectImp14hasOwnPropertyEPNS_9ExecStateERKNS_10IdentifierE
+__ZNK3KJS9ObjectImp14hasOwnPropertyEPNS_9ExecStateEj
+__ZNK3KJS9ObjectImp14implementsCallEv
+__ZNK3KJS9ObjectImp19implementsConstructEv
+__ZNK3KJS9ObjectImp21implementsHasInstanceEv
+__ZNK3KJS9ObjectImp3getEPNS_9ExecStateERKNS_10IdentifierE
+__ZNK3KJS9ObjectImp3getEPNS_9ExecStateEj
+__ZNK3KJS9ObjectImp4typeEv
+__ZNK3KJS9ObjectImp6canPutEPNS_9ExecStateERKNS_10IdentifierE
+__ZNK3KJS9ObjectImp8inheritsEPKNS_9ClassInfoE
+__ZNK3KJS9ObjectImp8toNumberEPNS_9ExecStateE
+__ZNK3KJS9ObjectImp8toObjectEPNS_9ExecStateE
+__ZNK3KJS9ObjectImp8toStringEPNS_9ExecStateE
+__ZNK3KJS9ObjectImp9classInfoEv
+__ZNK3KJS9ObjectImp9classNameEv
+__ZNK3KJS9ObjectImp9prototypeEv
+__ZNK3KJS9ObjectImp9toBooleanEPNS_9ExecStateE
+__ZNK3KJS9Reference15getPropertyNameEPNS_9ExecStateE
+__ZTIN3KJS11InterpreterE
+__ZTIN3KJS8DebuggerE
+__ZTIN3KJS8ValueImpE
+__ZTIN3KJS9ObjectImpE
+_kjs_pcre_compile
+_kjs_pcre_exec
+_kjs_pcre_free
+_kjs_strtod
