@@ -1,3 +1,12 @@
+2005-10-05  Timothy Hatcher  <timothy@apple.com>
+
+        - Fixed <rdar://problem/4269934> JavaScriptCore needs to limit its exports
+          
+        Reviewed by Geoff.
+        
+        * JavaScriptCore.xcodeproj: Use the new export file in all configs except Development
+        * JavaScriptCore.exp: New export file
+        
 2005-10-03  Geoffrey Garen  <ggaren@apple.com>
 
         - Fixed <rdar://problem/4244084> Denver Regression: setUTC() functions don't take 
